2004-06-28  David Asher  <david.asher@cavium.com>

	PR libstdc++/11352
	* include/bits/locale_facets.tcc (__pad<>::_S_pad): Don't
	access __olds beyond __oldlen.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-24  Ronald Landheer-Cieslak  <ronald@landheer.com>

	PR libstdc++/11171
	* acinclude.m4: Deal with --with-newlib.
	* aclocal.m4: Regenerate.
	* configure.in: Set os_include_dir correctly when --with-newlib.
	* configure: Regenerate.
	
2004-05-13  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/14720
	* config/linker-map.gnu: Export basic_ios::_M_setstate.
	* testsuite/abi_check.cc (check_version): Add GLIBCXX_3.2.4
	to known versions.
	* configure.in (libtool_VERSION): To 5:6:0. 
	* configure: Regenerated.

2004-05-07  Matthias Klose  <doko@debian.org>

	* include/backward/iterator.h: Add GPL copyright info,
	with exception clause.
	* config/cpu/hppa/atomicity.h: Likewise.
	* config/io/c_io_libio_codecvt.c: Likewise.
	* include/bits/boost_concept_check.h: Likewise.
	* include/backward/iterator.h: Likewise.
	* libsupc++/tinfo.h: Likewise.
	* po/string_literals.cc: Likewise.
	* src/wstring-inst.cc: Likewise.
	* libio/_G_config.h: Likewise.
	* libio/iolibio.h: Likewise.

2004-02-22  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/14220
	* include/bits/locale_facets.tcc (num_put<>::_M_convert_float):
	Don't clip the precision passed down to __convert_from_v:
	22.2.2.2.2 nowhere says so.

2004-02-14  Release Manager

	* GCC 3.3.3 Released.

2004-02-04  Benjamin Kosnik  <bkoz@redhat.com>
	    Zack Weinberg  <zack@codesourcery.com>

	* config/io/basic_file_stdio.cc (__gnu_internal::fopen_mode):
	New function.
	(__basic_file<char>::sys_open, __basic_file<char>::open): Use it.
	(__basic_file<char>::_M_open_mode): Use it.  Mark deprecated.

	* testsuite/27_io/filebuf_members.cc (test_06, test_07):
	Correct flags to filebuf::open calls.

2004-01-29  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/12657